# MemCore

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  START-HERE.md  events_inspect.txt  goal.md  main.py  pyproject.toml  start-memcore.bat  start-memcore.ps1  stop-memcore.ps1  test_agent_run.py  test_fastembed.py  test_qdrant.py
.claude/: settings.local.json
benchmarks/: README.md  bench_consolidation.py  bench_forgetting_curve.py  bench_retrieval_precision.py  bench_token_savings.py
data/: memcore_graph.db
data/qdrant_storage/: meta.json
docs/: COMPARISON.md  QUICKSTART-TOMORROW.md  RUST_PYTHON_COMPARISON.md  TODO-TOMORROW.md  api-specification.md  core-concepts.md  dashboard-assessment-v2.md  dashboard-assessment.md  dashboard-stats-design.md  data-schema.md  development-log-2026-03-02.md  embedding-strategy.md  gpu-model-guide.md  hive-integration.md  implementation-plan.md  local-llm-setup.md  model-tier-strategy.md  multilingual-strategy.md  research-agent-memory-management.md  research-initial-goal.md  research-memcore-architecture.md
scripts/: check_embedding_models.py  cleanup_failed_memories.py  export_memories.py  import_memories.py  inspect_strands.py  run_consolidation.py  run_dashboard.py  run_server.py  run_stdio.py  run_tray.py  setup-autostart.ps1  test_chinese_support.py  test_local_embedding.py  test_strand_agent.py  verify_config.py
src/memcore/: main.py
src/memcore/agent/: consolidation_agent.py  model_adapter.py
src/memcore/dashboard/: __init__.py  analytics.py  server.py
src/memcore/gatekeeper/: router.py
src/memcore/memory/: advanced_search.py  conflicts.py  consolidation.py  feedback_optimizer.py  instructions.py  reflections.py  tiered.py
src/memcore/skills/: __init__.py  consolidate_export_skill.py  feedback_skill.py  ingest_consolidated_skill.py  (+2 more)
tests/: scenario_runner.py  test_agent_run.py  test_consolidation_agent.py  test_fastembed.py  test_kimi_cli.py  test_qdrant.py
(+22 files in other folders)
