[project]
name = "memcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastembed>=0.4.2",
    "litellm>=1.81.14",
    "mcp>=1.26.0",
    "networkx>=3.6.1",
    "onnxruntime<1.20.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "strands-sdk>=10.0.2",
    "watchdog>=6.0.0",
]
